fix: scrollbar styles compatible with firefox

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -366,6 +366,11 @@ header {
   border-radius: 9999px;
 }
 
+* {
+  scrollbar-width: thin;
+  scrollbar-color: hsla(0, 0%, 56.1%, .3) transparent;
+} 
+
 .ai-chat {
   width: 100%;
   display: flex;
